--- a/index.html
+++ b/index.html
@@ -54,10 +54,11 @@
             <li><span>IT</span><br>Designing Web/App/System Interfaces</li>
             <li>Programming in Python</li>
             <li>Programming in HTML, CSS, PHP</li>
-            <li>Adobe Photoshop / Canva </li>
+            <li>Adobe Photoshop / Canva / Capcut</li>
             <li>Knowledgeable of Microsoft word, Powerpoint, and Excel</li>
             <li><span>Personal</span><br>Customer Servicing</li>
             <li>English Communication</li>
+            <li>Leadership</li>
           </ul>
         </div>
         <div class="tab-contents" id="Experience">
