--- a/index.html
+++ b/index.html
@@ -56,8 +56,8 @@
             <li>Programming in HTML, CSS, PHP</li>
             <li>Adobe Photoshop / Canva / Capcut</li>
             <li>Knowledgeable of Microsoft word, Powerpoint, and Excel</li>
-            <li><span>Personal</span><br>Customer Servicing</li>
-            <li>English Communication</li>
+            <li><span>Personal</span><br>Excellent in English</li>
+            <li>Communication</li>
             <li>Leadership</li>
           </ul>
         </div>
