--- a/index.html
+++ b/index.html
@@ -52,9 +52,10 @@
         <div class="tab-contents bullet" id="Skills">
           <ul>
             <li><span>IT</span><br>Designing Web/App/System Interfaces</li>
-            <li>Programming in Python</li>
-            <li>Programming in HTML, CSS, PHP</li>
-            <li>Adobe Photoshop / Canva / Capcut</li>
+            <li>Programming in Python, HTML, CSS, and PHP</li>
+            <li>Editing Photo/Videos in Adobe Photoshop, Canva, and Capcut</li>
+            <li>Network Configuration</li>
+            <li></li>
             <li>Knowledgeable of Microsoft word, Powerpoint, and Excel</li>
             <li><span>Personal</span><br>Excellent in English</li>
             <li>Communication</li>
