--- a/index.html
+++ b/index.html
@@ -21,10 +21,11 @@
           <li><a href="#contact">Contact</a></li>
         </ul>
       </nav>
+      <div class="animated-text"></div>
       <div class="header-text">
-        <h1>Hi!, I am Daniel <span>Villete</span></h1>
+        <h1>Daniel Villete | <span></span></h1>
         <p>Information Technology | 22 years old | Cavite, Philippines</p>
-        <p>a fresh graduate from Cavite State University </p>
+        <p>a fresh graduate from Cavite School **** </p>
       </div>
     </div>
   </div>
@@ -37,7 +38,9 @@
       </div>  
       <div class="about-col-2">
         <h1 class="sub-title">About me</h1>
-        <p>Lorem, ipsum dolor sit amet consectetur adipisicing elit. Unde, soluta? Earum fugit assumenda, eius molestiae sint dolorem aut doloremque quos, amet incidunt blanditiis quidem eveniet necessitatibus a voluptate, doloribus qui?</p>
+        <p>I am <span>Daniel</span> but <span>Niel</span> for short, a career-driven person with a huge interest in computer. During childhood I was used to play computer games that leads me to 
+          become a computer-type of kid, Playing computer games taught me knowledge about the basic of computer that pushed me to study more about it. </p>
+        <h4>See other information below...</h4>
         <div class="tab-titles">
           <p class="tab-links active-link " onclick="opentab('Education')">Education</p>
           <p class="tab-links" onclick="opentab('Skills')">Skills</p>
@@ -45,26 +48,24 @@
         </div>
         <div class="tab-contents active-tab" id="Education">
           <ul>
-            <li><span>Education</span><br>Cavite State University</li>
+            <li><span>Education</span><br>Cavite School ****</li>
             <li><span>Information Technology</span><br>2019-2025</li>
           </ul>
         </div>
         <div class="tab-contents bullet" id="Skills">
           <ul>
-            <li><span>IT</span><br>Designing Web/App/System Interfaces</li>
+            <li><span>IT: </span><br>Designing Web, App, and System UX/UI</li>
             <li>Programming in Python, HTML, CSS, and PHP</li>
-            <li>Editing Photo/Videos in Adobe Photoshop, Canva, and Capcut</li>
-            <li>Network Configuration</li>
-            <li></li>
+            <li>Photo/Video Editing in Adobe Photoshop, Canva, and Capcut</li>
             <li>Knowledgeable of Microsoft word, Powerpoint, and Excel</li>
-            <li><span>Personal</span><br>Excellent in English</li>
-            <li>Communication</li>
-            <li>Leadership</li>
+            <li><span><br>Personal: </span><br>Excellent in English Communication</li>
+            <li>Active Listener and Adaptability</li>
+            <li>Leadership and Team Player</li>
           </ul>
         </div>
         <div class="tab-contents" id="Experience">
           <ul>
-            <li><span>Intern - IT Staff</span><br>Management Information System <br>City Hall, Samonte Park, Cavite City</li>
+            <li><span>Intern - IT Staff</span><br>Management Information System <br>City Hall, Location ****</li>
           </ul>
         </div>
       </div>
@@ -77,23 +78,21 @@
     <div class="services-list">
       <div>
         <i class="fa-solid fa-code"></i>
-        <h2>Web Designing</h2>
-        <p>Lorem ipsum dolor sit amet, consectetur adipisicing elit. Sed nulla nibh, tincidunt sit amet sapien quis.
-          <a href="">Learn more</a>
-        </p>
+        <h2>Web Design</h2>
+        <p>Crafting visually and user-friendly designs tailored to meet your unique needs.</p>
+        <a href="">Learn more</a>
       </div>
       <div>
         <i class="fa-solid fa-crop"></i>
-        <h2>UI/UX Designing</h2>
-        <p>Lorem ipsum dolor sit amet, consectetur adipisicing elit. Sed nulla nibh, tincidunt sit amet sapien quis.
-          <a href="">Learn more</a>
-        </p>
+        <h2>UI/UX Design</h2>
+        <p>Transforming your ideas to aesthetically pleasing designs with Figma/Axure RP.</p>
+        <a href="">Learn more</a>
       </div>
       <div>
         <i class="fa-solid fa-file"></i>
-        <h2>Docu</h2>
-        <p>Lorem ipsum dolor sit amet, consectetur adipisicing elit. Sed nulla nibh, tincidunt sit amet sapien quis.
-        </p>
+        <h2>Documents</h2>
+        <p>Get your documents done ahead of time with Microsoft Words, Excel, or Power Point.</p>
+        <a href="">Learn more</a>
       </div>
     </div>
   </div>
@@ -105,27 +104,27 @@
     <h1 class="sub-title">My Work</h1>
     <div class="work-list">
       <div class="work">
-        <img src="images/work-1.png">
+        <img src="images/Ongoing.png">
         <div class="layer">
-          <h3>Social Media App</h3>
-          <p>The app connects you and the talented people around the world. Download it from play store.</p>
+          <h3>Pending Work 1</h3>
+          <p>On going...</p>
           <a href=""><i class="fa-solid fa-link"></i></a>
         </div>
       </div>
       <div class="work">
-        <img src="images/work-2.png">
+        <img src="images/Smarthome.png">
         <div class="layer">
-          <h3>Music App</h3>
-          <p>The app connects you and the talented people around the world. Download it from play store.</p>
-          <a href=""><i class="fa-solid fa-link"></i></a>
+          <h3>Smarth Home App UX/UI</h3>
+          <p>Created using Azure RP 9, Images from Google, Icons from fontawesome.</p>
+          <a href="https://z2f67t.axshare.com"><i class="fa-solid fa-link"></i></a>
         </div>
       </div>
       <div class="work">
-        <img src="images/work-3.png">
+        <img src="images/Kiosk.png">
         <div class="layer">
-          <h3>Online App</h3>
-          <p>The app connects you and the talented people around the world. Download it from play store.</p>
-          <a href=""><i class="fa-solid fa-link"></i></a>
+          <h3>Mcdo Kiosk UX/UI</h3>
+          <p>Created using Azure RP 9, I do not own any picture from this credits to Mcdonals PH Website. </p>
+          <a href="https://chfrpf.axshare.com"><i class="fa-solid fa-link"></i></a>
         </div>
       </div>
     </div>
@@ -139,26 +138,31 @@
     <div class="row">
       <div class="contact-left">
         <h1 class="sub-title">Contact</h1>
+        <img src="images/grad.jpg" alt="grad">
+      </div>
+      <div class="contact-right">
         <p><i class="fa-solid fa-paper-plane"></i> email@gmail.com</p>
         <p><i class="fa-solid fa-square-phone"></i> 09759943213</p>
         <div class="social-icons">
           <a href=""><i class="fa-brands fa-facebook"></i></a>
           <a href=""><i class="fa-brands fa-linkedin"></i></a>
         </div>
-        <a href="images/Daniel Resume 2024.pdf" download class="btn btn2">Check my CV</a>
+        <a href="images/Daniel Resume 2024.pd" download class="btn btn2">Check my CV</a>
+
       </div>
-      <div class="contact-right">
+
+      <div class="contact-bot">
         <form>
           <input type="text" name="Name" placeholder="Enter your Name" required>
           <input type="email" name="Email" placeholder="Enter your Email" required>
           <textarea name="message" rows="6" placeholder="Enter your Message" required></textarea>
-          <button type="submit" class="btn btn2">Submit</button>
+          <button type="submit" class="btn btn2">Editing...</button>
         </form>
       </div>
     </div>
   </div>
   <div class="copyright">
-    <p>Copyright Elijah - Personal Portfolio <i class="fa-solid fa-thumbs-up"></i></p> 
+    &copy; 2024 Elijah Personal Portfolio. All Rights Reserved. <i class="fa fa-heart"></i>
   </div>
 </div>
 
