--- a/index.html
+++ b/index.html
@@ -116,7 +116,7 @@
         <div class="layer">
           <h3>Smarth Home App UX/UI</h3>
           <p>Created using Azure RP 9, Images from Google, Icons from fontawesome.</p>
-          <a href="https://z2f67t.axshare.com"><i class="fa-solid fa-link"></i></a>
+          <a href="https://z2f67t.axshare.com" target="_blank"><i class="fa-solid fa-link"></i></a>
         </div>
       </div>
       <div class="work">
@@ -124,7 +124,7 @@
         <div class="layer">
           <h3>Mcdo Kiosk UX/UI</h3>
           <p>Created using Azure RP 9, I do not own any picture from this credits to Mcdonals PH Website. </p>
-          <a href="https://chfrpf.axshare.com"><i class="fa-solid fa-link"></i></a>
+          <a href="https://chfrpf.axshare.com" target="_blank"><i class="fa-solid fa-link"></i></a>
         </div>
       </div>
     </div>
