--- a/index.html
+++ b/index.html
@@ -142,7 +142,7 @@
       </div>
       <div class="contact-right">
         <p><i class="fa-solid fa-paper-plane"></i> email@gmail.com</p>
-        <p><i class="fa-solid fa-square-phone"></i> 09759943213</p>
+        <p><i class="fa-solid fa-square-phone"></i> 097599*****</p>
         <div class="social-icons">
           <a href=""><i class="fa-brands fa-facebook"></i></a>
           <a href=""><i class="fa-brands fa-linkedin"></i></a>
