--- a/index.html
+++ b/index.html
@@ -21,11 +21,10 @@
           <li><a href="#contact">Contact</a></li>
         </ul>
       </nav>
-      <div class="animated-text"></div>
       <div class="header-text">
         <h1>Daniel Villete | <span></span></h1>
         <p>Information Technology | 22 years old | Cavite, Philippines</p>
-        <p>a fresh graduate from Cavite School **** </p>
+        <p>a fresh graduate from Cavite State University </p>
       </div>
     </div>
   </div>
@@ -48,7 +47,7 @@
         </div>
         <div class="tab-contents active-tab" id="Education">
           <ul>
-            <li><span>Education</span><br>Cavite School ****</li>
+            <li><span>Education</span><br>Cavite State University</li>
             <li><span>Information Technology</span><br>2019-2025</li>
           </ul>
         </div>
@@ -58,22 +57,23 @@
             <li>Programming in Python, HTML, CSS, and PHP</li>
             <li>Photo/Video Editing in Adobe Photoshop, Canva, and Capcut</li>
             <li>Knowledgeable of Microsoft word, Powerpoint, and Excel</li>
-            <li><span><br>Personal: </span><br>Excellent in English Communication</li>
+            <li><span>Personal: </span><br>Excellent in English Communication</li>
             <li>Active Listener and Adaptability</li>
             <li>Leadership and Team Player</li>
           </ul>
         </div>
         <div class="tab-contents" id="Experience">
           <ul>
-            <li><span>Intern - IT Staff</span><br>Management Information System <br>City Hall, Location ****</li>
+            <li><span>Intern - IT Staff</span><br>Management Information System <br>City Hall, Samonte Park, Cavite City</li>
           </ul>
         </div>
       </div>
     </div>
+  </div>
 </div>
 <!-- --SERVICES-- -->
 <div id="services">
-  <div class="containet">
+  <div class="container">
     <h1 class="sub-title">My Services</h1>
     <div class="services-list">
       <div>
@@ -104,10 +104,10 @@
     <h1 class="sub-title">My Work</h1>
     <div class="work-list">
       <div class="work">
-        <img src="images/Ongoing.png">
+        <img src="images/work-1.png">
         <div class="layer">
-          <h3>Pending Work 1</h3>
-          <p>On going...</p>
+          <h3>Social Media App</h3>
+          <p>The app connects you and the talented people around the world. Download it from play store.</p>
           <a href=""><i class="fa-solid fa-link"></i></a>
         </div>
       </div>
@@ -131,7 +131,6 @@
     <a href="" class="btn">See more</a>
   </div>
 </div>
-
 <!-- --CONTACT-- -->
 <div class="contact">
   <div class="container">
@@ -142,13 +141,12 @@
       </div>
       <div class="contact-right">
         <p><i class="fa-solid fa-paper-plane"></i> email@gmail.com</p>
-        <p><i class="fa-solid fa-square-phone"></i> 097599*****</p>
+        <p><i class="fa-solid fa-square-phone"></i> 0975994****</p>
         <div class="social-icons">
           <a href=""><i class="fa-brands fa-facebook"></i></a>
           <a href=""><i class="fa-brands fa-linkedin"></i></a>
         </div>
-        <a href="images/Daniel Resume 2024.pd" download class="btn btn2">Check my CV</a>
-
+        <a href="images/Daniel Resume 2024.pdf" download class="btn btn2">Check my CV</a>
       </div>
 
       <div class="contact-bot">
@@ -156,16 +154,15 @@
           <input type="text" name="Name" placeholder="Enter your Name" required>
           <input type="email" name="Email" placeholder="Enter your Email" required>
           <textarea name="message" rows="6" placeholder="Enter your Message" required></textarea>
-          <button type="submit" class="btn btn2">Editing...</button>
+          <button type="submit" class="btn btn2">Submit</button>
         </form>
       </div>
     </div>
   </div>
-  <div class="copyright">
-    &copy; 2024 Elijah Personal Portfolio. All Rights Reserved. <i class="fa fa-heart"></i>
-  </div>
 </div>
-
+<div class="copyright">
+  &copy; 2024 Elijah Personal Portfolio. All Rights Reserved. <i class="fa fa-heart"></i>
+</div>
 <script>
   var tablinks = document.getElementsByClassName("tab-links");
   var tabcontents = document.getElementsByClassName("tab-contents");
