--- a/index.html
+++ b/index.html
@@ -4,7 +4,7 @@
   <meta charset="UTF-8">
   <meta http-equiv="X-UA-Compatible" content="IE=edge">
   <meta name="viewport" content="width=device-width, initial-scale=1.0">
-  <title>Daniel Villete - Portfolio</title>
+  <title>Daniel VilSSSSSSSSSSSlete - Portfolio</title>
   <link rel="stylesheet" href="style.css">
   <script src="https://kit.fontawesome.com/eb164d029f.js" crossorigin="anonymous"></script>
 </head>
