--- a/index.html
+++ b/index.html
@@ -13,13 +13,15 @@
     <div class="container">
       <nav>
         <img src="images/logo.png" class="logo">
-        <ul>
-          <li><a href="#home">Home</a></li>
+        <ul id="sidemenu">
+          <li><a href="#header">Home</a></li>
           <li><a href="#about">About Me</a></li>
+          <li><a href="#services">Services</a></li>
           <li><a href="#portfolio">Portfolio</a></li>
-          <li><a href="#skills">Skills</a></li>
           <li><a href="#contact">Contact</a></li>
+          <i class="fa-solid fa-circle-xmark" onclick="closemenu()"></i>
         </ul>
+        <i class="fa-solid fa-bars" onclick="openmenu()"></i>
       </nav>
       <div class="header-text">
         <h1>Daniel Villete | <span></span></h1>
@@ -47,8 +49,8 @@
         </div>
         <div class="tab-contents active-tab" id="Education">
           <ul>
-            <li><span>Education</span><br>Cavite State University</li>
-            <li><span>Information Technology</span><br>2019-2025</li>
+            <li><span>Education</span><br>Cavite State University - Cavite City</li>
+            <li><span>Information Technology</span><br>2019-2024</li>
           </ul>
         </div>
         <div class="tab-contents bullet" id="Skills">
@@ -65,6 +67,12 @@
         <div class="tab-contents" id="Experience">
           <ul>
             <li><span>Intern - IT Staff</span><br>Management Information System <br>City Hall, Samonte Park, Cavite City</li>
+            <li><span>Duties: </span><br>IT Support for maintenance of the work place (Router, Cables, etc.)</li>
+            <li>Handling concerns personally and landline</li>
+            <li>Evaluating Thesis of IT Students (Website, App, System)</li>
+            <li>Data Entry in System for one office</li>
+            <li>Programming using Python</li>
+            <li>Presentations of learnings during Intern/Training</li>
           </ul>
         </div>
       </div>
@@ -137,19 +145,15 @@
     <div class="row">
       <div class="contact-left">
         <h1 class="sub-title">Contact</h1>
-        <img src="images/grad.jpg" alt="grad">
-      </div>
-      <div class="contact-right">
         <p><i class="fa-solid fa-paper-plane"></i> email@gmail.com</p>
         <p><i class="fa-solid fa-square-phone"></i> 0975994****</p>
         <div class="social-icons">
-          <a href=""><i class="fa-brands fa-facebook"></i></a>
-          <a href=""><i class="fa-brands fa-linkedin"></i></a>
+          <a href="https://web.facebook.com/itsbadvibesforever" target="_blank"><i class="fa-brands fa-facebook"></i></a>
+          <a href="https://www.linkedin.com/in/danielvillete" target="_blank"><i class="fa-brands fa-linkedin"></i></a>
         </div>
         <a href="images/Daniel Resume 2024.pdf" download class="btn btn2">Check my CV</a>
       </div>
-
-      <div class="contact-bot">
+      <div class="contact-right">
         <form>
           <input type="text" name="Name" placeholder="Enter your Name" required>
           <input type="email" name="Email" placeholder="Enter your Email" required>
@@ -159,10 +163,13 @@
       </div>
     </div>
   </div>
+  <!-- --FOOTER-- -->
+  <div class="copyright">
+    &copy; 2024 Elijah Personal Portfolio. All Rights Reserved. <i class="fa fa-heart"></i>
+  </div>
 </div>
-<div class="copyright">
-  &copy; 2024 Elijah Personal Portfolio. All Rights Reserved. <i class="fa fa-heart"></i>
-</div>
+
+
 <script>
   var tablinks = document.getElementsByClassName("tab-links");
   var tabcontents = document.getElementsByClassName("tab-contents");
@@ -177,6 +184,14 @@
     document.getElementById(tabname).classList.add("active-tab");
   }
 </script>
-
+<script>
+  var sidemenu = document.getElementById("sidemenu")
+  function openmenu(){
+    sidemenu.style.right = "0";
+  }
+  function closemenu(){
+    sidemenu.style.right = "-200px";
+  } 
+</script>
 </body>
 </html> 
