--- a/index.html
+++ b/index.html
@@ -39,8 +39,7 @@
       </div>  
       <div class="about-col-2">
         <h1 class="sub-title">About me</h1>
-        <p>I am <span>Daniel</span> but <span>Niel</span> for short, a career-driven person with a huge interest in computer. During childhood I was used to play computer games that leads me to 
-          become a computer-type of kid, Playing computer games taught me knowledge about the basic of computer that pushed me to study more about it. </p>
+        <p>I am Daniel but Niel for short, I am a recent IT graduate with a basic knowledge in software development, network administration, and cybersecurity. During my academic journey, I learned my skills in Python, HTML, CSS, JS and gained hands-on experience through internships and projects. <br><br>I am adept at troubleshooting technical issues, developing user-experience applications/websites, and ensuring optimal network performance. My collaborative mindset and eagerness to learn drive me to stay updated with the latest technological advancements. I am enthusiastic about leveraging my skills in a dynamic and innovative environment, contributing to meaningful projects, and growing as an IT professional.</p>
         <h4>See other information below...</h4>
         <div class="tab-titles">
           <p class="tab-links active-link " onclick="opentab('Education')">Education</p>
@@ -133,8 +132,8 @@
       <div class="work">
         <img src="images/work-1.png">
         <div class="layer">
-          <h3>Social Media App</h3>
-          <p>The app connects you and the talented people around the world. Download it from play store.</p>
+          <h3>Project 1</h3>
+          <p>Currently working on this project.</p>
           <a href=""><i class="fa-solid fa-link"></i></a>
         </div>
       </div>
@@ -164,13 +163,13 @@
     <div class="row">
       <div class="contact-left">
         <h1 class="sub-title">Contact</h1>
-        <p><i class="fa-solid fa-paper-plane"></i> email@gmail.com</p>
-        <p><i class="fa-solid fa-square-phone"></i> 0975994****</p>
+        <p><i class="fa-solid fa-paper-plane"></i> danielvillete23gmail.com</p>
+        <p><i class="fa-solid fa-square-phone"></i> 09759943826</p>
         <div class="social-icons">
           <a href="https://web.facebook.com/itsbadvibesforever" target="_blank"><i class="fa-brands fa-facebook"></i></a>
           <a href="https://www.linkedin.com/in/danielvillete" target="_blank"><i class="fa-brands fa-linkedin"></i></a>
         </div>
-        <a href="images/Daniel Resume 2024.pdf" download class="btn btn2">Check my CV</a>
+        <a href="images/Daniel Villete Resume 2024.pdf" download class="btn btn2">Check my CV</a>
       </div>
       <div class="contact-right">
         <form name="submit-to-google-sheet">
@@ -185,7 +184,7 @@
   </div>
   <!-- --FOOTER-- -->
   <div class="copyright">
-    &copy; 2024 Elijah Personal Portfolio. All Rights Reserved. <i class="fa fa-heart"></i>
+    &copy; 2024 Daniel Villete Personal Portfolio. All Rights Reserved. <i class="fa fa-heart"></i>
   </div>
 </div>
 
