--- a/index.html
+++ b/index.html
@@ -127,7 +127,7 @@
 <!-- --PORTFOLIO-- -->
 <div id="portfolio">
   <div class="container">
-    <h1 class="sub-title">My Work</h1>
+    <h1 class="sub-title">My Work</h1><BR>
     <div class="work-list">
       <div class="work">
         <img src="images/work-1.png">
@@ -151,6 +151,30 @@
           <h3>Mcdo Kiosk UX/UI</h3>
           <p>Created using Azure RP 9, I do not own any picture from this credits to Mcdonals PH Website. </p>
           <a href="https://chfrpf.axshare.com" target="_blank"><i class="fa-solid fa-link"></i></a>
+        </div>
+      </div>
+      <div class="work">
+        <img src="images/scenery.png">
+        <div class="layer">
+          <h3>Scenery Website</h3>
+          <p>Scenery is a blog-website that is one of our activities while we are studying it focuses on our beautiful shots that we catured. This website is created with Bootstrap, Check the website below.</p>
+          <a href="https://danielvillete.github.io/Scenery/" target="_blank"><i class="fa-solid fa-link"></i></a>
+        </div>
+      </div>
+      <div class="work">
+        <img src="images/jamir.jpg">
+        <div class="layer">
+          <h3>Veterinary Website</h3>
+          <p>Jamir Veterinary Clinic Website showcase the services that they offers and it also have appointment. This website is created with Bootstrap, Check the website below.</p>
+          <a href="https://danielvillete.github.io/Jamir/" target="_blank"><i class="fa-solid fa-link"></i></a>
+        </div>
+      </div>
+      <div class="work">
+        <img src="images/work-1.png">
+        <div class="layer">
+          <h3>Project 6</h3>
+          <p>Currently working on this project.</p>
+          <a href="" target="_blank"><i class="fa-solid fa-link"></i></a>
         </div>
       </div>
     </div>
