--- a/index.html
+++ b/index.html
@@ -166,7 +166,7 @@
         <div class="layer">
           <h3>Veterinary Website</h3>
           <p>Jamir Veterinary Clinic Website showcase the services that they offers and it also have appointment. This website is created with Bootstrap, Check the website below.</p>
-          <a href="https://185.16.38.230/Jamir/?__cpo=aHR0cHM6Ly9kYW5pZWx2aWxsZXRlLmdpdGh1Yi5pbw#hero" target="_blank"><i class="fa-solid fa-link"></i></a>
+          <a href="https://danielvillete.github.io/Jamir/" target="_blank"><i class="fa-solid fa-link"></i></a>
         </div>
       </div>
       <div class="work">
