--- a/index.html
+++ b/index.html
@@ -165,7 +165,7 @@
         <img src="images/jamir.jpg">
         <div class="layer">
           <h3>Veterinary Website</h3>
-          <p>Jamir Veterinary Clinic Website showcase the services that they offers and it also have appointment. This website is created with Bootstrap, Check the website below.</p>
+          <p>Jamir Veterinary Clinic Website showcase the services that they offers and it also has an appointment. This website is created with Bootstrap, Check the website below.</p>
           <a href="https://danielvillete.github.io/Jamir/" target="_blank"><i class="fa-solid fa-link"></i></a>
         </div>
       </div>
