--- a/index.html
+++ b/index.html
@@ -154,7 +154,7 @@
         </div>
       </div>
       <div class="work">
-        <img src="images/scenery.png">
+        <img src="images/scenery.jpg">
         <div class="layer">
           <h3>Scenery Website</h3>
           <p>Scenery is a blog-website that is one of our activities while we are studying it focuses on our beautiful shots that we catured. This website is created with Bootstrap, Check the website below.</p>
@@ -170,11 +170,10 @@
         </div>
       </div>
       <div class="work">
-        <img src="images/work-1.png">
+        <img src="images/schoollogo.jpg">
         <div class="layer">
-          <h3>Project 6</h3>
-          <p>Currently working on this project.</p>
-          <a href="" target="_blank"><i class="fa-solid fa-link"></i></a>
+          <h3>School Logo</h3>
+          <p>Made with Adobe Photoshop and Dog logo from Google</p>
         </div>
       </div>
     </div>
