--- a/index.html
+++ b/index.html
@@ -130,7 +130,7 @@
     <h1 class="sub-title">My Work</h1><BR>
     <div class="work-list">
       <div class="work">
-        <img src="images/work-1.png">
+        <img src="images/Ongoing.png">
         <div class="layer">
           <h3>Project 1</h3>
           <p>Currently working on this project.</p>
