--- a/index.html
+++ b/index.html
@@ -130,10 +130,10 @@
     <h1 class="sub-title">My Work</h1><BR>
     <div class="work-list">
       <div class="work">
-        <img src="images/Ongoing.png">
+        <img src="images/hiring.jpg">
         <div class="layer">
-          <h3>Project 1</h3>
-          <p>Currently working on this project.</p>
+          <h3>Hiring Photo Edit</h3>
+          <p>Made with Adobe Photoshop with, using stock images from internet. </p>
           <a href=""><i class="fa-solid fa-link"></i></a>
         </div>
       </div>
