--- a/index.html
+++ b/index.html
@@ -148,6 +148,22 @@
         </div>
       </div>
       <div class="work">
+        <img src="images/pnc.png">
+        <div class="layer">
+          <h3>Business Logo</h3>
+          <p>Made with Canva and background from Google</p>
+          <a href="images/pnc.png" target="_blank"><i class="fa-solid fa-link"></i></a>
+        </div>
+      </div>
+      <div class="work">
+        <img src="images/yulo.png">
+        <div class="layer">
+          <h3>Congratulatory Edit</h3>
+          <p>Made with Canva and Yulo's images from Reuters and Olympics</p>
+          <a href="images/yulo.png" target="_blank"><i class="fa-solid fa-link"></i></a>
+        </div>
+      </div>
+      <div class="work">
         <img src="images/csr hiring.jpg">
         <div class="layer">
           <h3>Customer Service Representative Hiring Photo Edit</h3>
@@ -188,7 +204,7 @@
         </div>
       </div>
     </div>
-    <a href="" class="btn">See more</a>
+    <!-- <a href="" class="btn">See more</a> -->
   </div>
 </div>
 <!-- --CONTACT-- -->
